objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>PostName__c</fullName>
        <description>PostName</description>
        <inlineHelpText>PostName</inlineHelpText>
        <label>PostName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Req_Experience__c</fullName>
        <description>Required Experience</description>
        <inlineHelpText>Required Experience</inlineHelpText>
        <label>Req_Experience</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Req_Skills__c</fullName>
        <description>Required Skills</description>
        <inlineHelpText>Required Skills</inlineHelpText>
        <label>Req_Skills</label>
        <type>TextArea</type>
    </fields>
    <label>Position</label>
    <nameField>
        <displayFormat>Position-{0000}</displayFormat>
        <label>PositionID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>